<resources>
    <string name="app_name">Engel Fax</string>
    <string name="title">Message to an angel</string>
    <string name="paint_title">Draw a nice picture!</string>
    <string name="sub_title">Nice!</string>
    <string name="hint">Your message to the angel&#8230;</string>
    <string name="number">Phone no.</string>
    <string name="settings">Settings</string>
    <string name="number_summary">The angel\'s phone no</string>
    <string name="sent">Message was sent!</string>
    <string name="error_radio_off">Error: radio is off!</string>
    <string name="error_phone_no">Error: invalid phone no %s!</string>
    <string name="error_no_phone_no">Error: no phone no entered</string>
    <string name="error_no_message">Error: no message entered!</string>
    <string name="error_null_pdu">Error: null pdu!</string>
    <string name="error_no_service">Error: No Service!</string>
    <string name="error_generic">Error: Generic Error!</string>
    <string name="title_activity_engel_preview">EngelPreview</string>
    <string name="clear_image">Clear image</string>
    <string name="load_image">Load image</string>
    <string name="brightness_threshold">Brightness threshold</string>
    <string name="invert_image">Invert image</string>
    <string name="scan_qr">Scan QR</string>
    <string name="crop__saving">Save Image…</string>
    <string name="crop__wait">Please Wait…</string>
    <string name="crop__pick_error">No sources available</string>
    <string name="crop__done">Done</string>
    <string name="crop__cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="number_saved">New number saved</string>
    <string name="error_number_save">Error saving new number</string>
    <string name="send">Send</string>
    <string name="erase">Erase</string>
    <string name="adjust">Adjust</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="paint_title_short">Drawing</string>
    <string name="paint_subtitle_short">a nice picture</string>
    <string name="error_no_image_loaded">No image Loaded</string>


</resources>
