<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".EngelMessenger">
    <group android:id="@+id/menu_features">
      <item android:id="@+id/action_paint" android:title="@string/paint_title"
            android:orderInCategory="100" android:icon="@android:drawable/ic_menu_edit" />
    </group>
    <group android:id="@+id/menu_settings">
        <item android:id="@+id/action_scan_qr" android:title="@string/scan_qr"
            android:orderInCategory="101" android:icon="@android:drawable/ic_menu_camera" />
        <item android:id="@+id/action_settings" android:title="@string/settings"
            android:orderInCategory="102" android:icon="@android:drawable/ic_menu_agenda"/>
    </group>
</menu>
