<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="software.oi.engelfax.activity.PaintActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/paintHolder"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:id="@+id/paintArea"
            android:padding="0dp"
            android:background="#000"
            android:textColor="#fff"
            android:textSize="18sp"

            android:layout_gravity="center"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:id="@+id/linearLayout">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/drawMode"
            android:textColor="#fff"
            android:background="@drawable/back_button_selected"
      />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/erase"
            android:id="@+id/eraseMode"
            android:src="@android:drawable/ic_menu_delete"
            android:background="@drawable/back_button"
            android:layout_toRightOf="@+id/drawMode" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/adjustImage"
            android:src="@android:drawable/ic_menu_preferences"
            android:background="@drawable/back_button"
            android:contentDescription="@string/adjust"
            android:layout_toRightOf="@+id/eraseMode" />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:visibility="visible"
            android:id="@+id/sendButton"
            android:contentDescription="@string/send"
            android:src="@android:drawable/ic_menu_send"
            android:background="@drawable/back_button"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
